phase-2-networking/day-14-network-policies/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    app: frontend
    
spec:
  containers:
  - name: nginx
    image: nginx:1.25   

---

apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    app: backend

spec:
  containers:
  - name: nginx
    image: nginx:1.25   

---

apiVersion: v1
kind: Pod
metadata:
  name: database-pod
  labels:
    app: database

spec:
  containers:
  - name: nginx
    image: nginx:1.25
